// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    bob
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    .
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    .
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    .
  </Text>
</View>
`;

exports[`renders correctly with optional props 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "justifyContent": "center",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    bob
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    .
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    .
  </Text>
  <Text
    style={
      Object {
        "color": "hsl(0, 0%, 0%)",
        "fontSize": 24,
        "fontWeight": "600",
        "letterSpacing": 0,
        "opacity": 1,
        "textAlign": "center",
      }
    }
  >
    .
  </Text>
</View>
`;
